--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "dev-carbon-footprint-frontend",
+  "_comment": "need to delete homepage if not working",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "jsonwebtoken": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "4.0.3",
+    "reactstrap": "^9.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
